--- a/package.json
+++ b/package.json
@@ -8,24 +8,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/bottom-tabs": "*",
+    "@react-navigation/drawer": "*",
+    "@react-navigation/native": "*",
+    "@react-navigation/native-stack": "*",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "@expo/vector-icons": "^14.1.0",
-    "react-native-paper": "4.9.2",
-    "react-native-screens": "~4.10.0",
     "react-native-animatable": "*",
-    "react-native-reanimated": "~3.17.4",
-    "@react-navigation/drawer": "*",
-    "@react-navigation/native": "*",
-    "react-native-vector-icons": "*",
-    "react-native-snap-carousel": "*",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
-    "@react-navigation/bottom-tabs": "*",
-    "@react-navigation/native-stack": "*",
+    "react-native-paper": "4.9.2",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "react-native-screens": "~4.10.0",
+    "react-native-snap-carousel": "*",
+    "react-native-vector-icons": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
